2008-11-24  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* atk/Makefile.am:
	* atk/SelectionAdapter.custom: new method for firing selection-changed
	( http://library.gnome.org/devel/atk/stable/AtkSelection.html#AtkSelection-selection-changed )

2008-11-21  Mike Kestner  <mkestner@novell.com>

	* glib/ManagedValue.cs: rework to ref count a ManagedValue instance
	and pass a GCHandle to it around, instead of taking out multiple
	gchandles on the managed target itself.

2008-11-21  Stephane Delcroix  <sdelcroix@novell.com>

	* glib/Global.cs: implement Global.ApplicationName for localized
	application name.

2008-11-21  Stephane Delcroix  <sdelcroix@novell.com>

	* Makefile.am:
	* glib/Format.cs: new class to map the g_format methods

2008-11-15  Mike Kestner  <mkestner@novell.com>

	* gdk/Event.cs: add EventOwnerChange to GetEvent.
	* gdk/EventOwnerChange.cs: manual subclass of Gdk.Event.
	* gdk/Gdk.metadata: hide EventOwnerChange.
	* gdk/Makefile.am: add EventOwnerChange.cs.
	* gdk/gdk-symbols.xml: add EventOwnerChange.

2008-11-15  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: mark the SpinButton::Output signal as manually
	marshaled to avoid a compat break.  The old manual marshaler expected
	and int RetVal and the new signal closure more accurately expects a
	bool.  Since returning 1 previously worked, we need to revert to the
	int expectation, even though bool is technically more correct.

2008-11-14  Brad Taylor  <brad@getcoded.net>
	
	* glib/Object.cs: Bind g_object_notify.
	* doc/en/GLib/Object.xml: Document new API.

2008-11-05  Mike Kestner  <mkestner@novell.com>

	* atk/atk-api-2.12.raw: regen
	* gtk/gtk-api-2.12.raw: regen
	* generator/Signal.cs: reinstate old custom marshaler generation and
	generate custom marshaling when 'manual' attr is set.
	* parser/gapi2xml.pl: set manual attr on sigs that have G_TYPE_POINTER
	parameters since the generic closure can't cope with them.

2008-11-05  Mike Kestner  <mkestner@novell.com>
