@@ -413,7 +413,10 @@ namespace GLib {
 					g_value_set_string (ref this, native);
 					GLib.Marshaller.Free (native);
 				} else if (type == GType.Pointer.Val) {
-					if (value is IWrapper) {
+					if (value.GetType () == typeof (IntPtr)) {
+						g_value_set_pointer (ref this, (IntPtr) value);
+						return;
+					} else if (value is IWrapper) {
 						g_value_set_pointer (ref this, ((IWrapper)value).Handle);
 						return;
 					}
