@@ -1,3 +1,7 @@
+2008-11-25  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Value.cs: fix for 'IntPtr as object' value construction.
+
 2008-11-24  Andrés G. Aragoneses  <aaragoneses@novell.com>
 
 	* atk/Makefile.am:
